Removed lines between items

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -12,7 +12,7 @@
     </ion-item>
 
     <!--Call Weather display and convert to degrees celcius-->
-    <ion-item>
+    <ion-item lines="none">
       <span>
         {{(weatherTemp?.temp - 273.15).toFixed(0)}}
       </span>
