--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -25,3 +25,23 @@
 #container a {
   text-decoration: none;
 }
+
+.cardStyle{
+  border-radius: 20px;
+  --ion-background-color: #3B7E88;
+}
+
+span{
+  color: white;
+  font-weight: 300;
+}
+
+#temp{
+  font-weight: 300;
+  font-size: 2em;
+  margin: 1px;
+}
+
+#locationIcon{
+  color: #F6B844;
+}
