--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,8 +9,9 @@
 </div>
   
   <!-- Animated Searchbar from Ionic-->
-<ion-searchbar class="searchBar" placeholder="Type City" animated></ion-searchbar>
+<ion-searchbar class="searchBar" [(ngModel)]="cityName" (ngModelChange)="loadData()" placeholder="Type City" animated></ion-searchbar>
   
+<div *ngIf="!loading"> <!--Information will not display until loading has finished-->
   <ion-card class="cardStyle">
 
     <!--Call Weather display and convert to degrees celcius-->
@@ -30,6 +31,7 @@
     </ion-item>
   </ion-card>
 
+
   <!--Display Max Temperature-->
   <ion-card class="cardStyle">
     <ion-item lines="none">
@@ -47,6 +49,11 @@
       <span>Humidity</span>
       <span slot="end">{{weatherTemp.humidity}}%</span>
     </ion-item>
-
+  
   </ion-card>
+</div>
+
+<div *ngIf="loading" class="spin">
+  <ion-spinner name="circles"></ion-spinner>
+</div>
 </ion-content>
