--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -56,4 +56,21 @@
 <div *ngIf="loading" class="spin">
   <ion-spinner name="circles"></ion-spinner>
 </div>
+
+<ion-tabs>
+  <ion-tab-bar slot="bottom">
+    <ion-tab-button tab="Home">
+      <ion-icon name="home"></ion-icon>
+      <ion-label>Home</ion-label>
+    </ion-tab-button>
+
+    
+      <ion-tab-button tab="About">
+        <ion-icon name="information"></ion-icon>
+        <ion-label>About</ion-label>
+      </ion-tab-button>
+
+  </ion-tab-bar>
+</ion-tabs>
+
 </ion-content>
