--- a/src/app/landing/landing.page.html
+++ b/src/app/landing/landing.page.html
@@ -1,9 +1,8 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>landing</ion-title>
-  </ion-toolbar>
-</ion-header>
 
 <ion-content>
+
+<div>
+  <p>Hello</p>
+</div>
 
 </ion-content>
