--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -4,6 +4,33 @@
 
 <ion-content [fullscreen]="true">
 
+  <ion-tabs>
+    <ion-tab-bar slot="bottom">
+  
+      <ion-tab-button tab="landing" [routerLink]="['/landing']">
+        <ion-icon name="home"></ion-icon>
+        <ion-label>Home</ion-label>
+      </ion-tab-button>
+  
+      <ion-tab-button tab="Weather" [routerLink]="['/home']">
+        <ion-icon name="cloud"></ion-icon>
+        <ion-label>Weather</ion-label>
+      </ion-tab-button>
+  
+      
+        <ion-tab-button tab="About" [routerLink]="['/about']">
+          <ion-icon name="information"></ion-icon>
+          <ion-label>About</ion-label>
+        </ion-tab-button>
+  
+        <ion-tab-button tab="Settings" [routerLink]="['/settings']">
+          <ion-icon name="settings"></ion-icon>
+          <ion-label>Settings</ion-label>
+        </ion-tab-button>
+  
+    </ion-tab-bar>
+  </ion-tabs>
+
 <div>
   <p></p>
 </div>
@@ -57,20 +84,6 @@
   <ion-spinner name="circles"></ion-spinner>
 </div>
 
-<ion-tabs>
-  <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="Home">
-      <ion-icon name="home"></ion-icon>
-      <ion-label>Home</ion-label>
-    </ion-tab-button>
 
-    
-      <ion-tab-button tab="About">
-        <ion-icon name="information"></ion-icon>
-        <ion-label>About</ion-label>
-      </ion-tab-button>
-
-  </ion-tab-bar>
-</ion-tabs>
 
 </ion-content>
