--- a/src/app/about/about.page.html
+++ b/src/app/about/about.page.html
@@ -1,5 +1,5 @@
 
-<ion-content>
+<ion-content style="--ion-background-color: #2596be;">
 
   <ion-tabs>
     <ion-tab-bar slot="bottom">
@@ -27,5 +27,14 @@
   
     </ion-tab-bar>
   </ion-tabs>
+
+<div>
+  <ion-card class="cardStyle">
+    <ion-item lines="none">
+      <span>Maximum Temperature</span>
+    </ion-item>
+  </ion-card>
+</div>
+
 
 </ion-content>
