--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -28,7 +28,7 @@
 
 .cardStyle{
   border-radius: 20px;
-  --ion-background-color: #3B7E88;
+  --ion-background-color: #2596be;
 }
 
 span{
@@ -56,7 +56,7 @@ span{
 
 .searchBar{
   
---ion-background-color: #3B7E88;
+--ion-background-color: #2596be;
   color: white;
   
 }
