--- a/src/app/landing/landing.page.html
+++ b/src/app/landing/landing.page.html
@@ -1,12 +1,7 @@
 
-<ion-content>
+<ion-content style="--ion-background-color: #2596be;">
 
-<div>
-  <p>Landing Page</p>
-</div>
-
-
-
+<!--Nav Bar-->
 <ion-tabs>
   <ion-tab-bar slot="bottom">
 
@@ -33,5 +28,16 @@
 
   </ion-tab-bar>
 </ion-tabs>
+
+<div class="image" id="text">
+  <img src="../../assets/station.png">
+  
+  <p><span id="text"><span id="text1">Eir<span id="text2">eC</span><span id="text3">ast</span></span></span></p>
+  <p><span id="text4">Quick and Easy Weather Prediction</span></p>
+  
+</div>
+
+
+
 
 </ion-content>
