Added content to pages

--- a/src/app/about/about.page.html
+++ b/src/app/about/about.page.html
@@ -1,5 +1,5 @@
 
-<ion-content style="--ion-background-color: #2596be;">
+<ion-content>
 
   <ion-tabs>
     <ion-tab-bar slot="bottom">
@@ -29,11 +29,31 @@
   </ion-tabs>
 
 <div>
-  <ion-card class="cardStyle">
+  <ion-card class="cardStyle" style="background-color: white;">
     <ion-item lines="none">
-      <span>Maximum Temperature</span>
+      <span style="text-align: center;">About EireCast</span>
     </ion-item>
   </ion-card>
+
+ 
+
+  <ion-list>
+    <ion-item>
+      <ion-icon name="cellular-outline" style="width: 100px; height: 100px; padding: 5%;"></ion-icon>
+      <p>EireCast is a simple, easy to use, efficient application to check the weather and various conditions in a city globally.</p>
+    </ion-item>
+    <ion-item>
+      <ion-icon name="cloud-upload-outline" style="width: 100px; height: 100px; padding: 2%;"></ion-icon>
+      <p>Uses OpenWeatherMap API for constant accurace forecasts.</p>
+    </ion-item>
+    <ion-item>
+      <ion-icon name="globe-outline" style="width: 100px; height: 100px; padding: 2%;"></ion-icon>
+      <p>Uses Geolocation to keep track of your current location and weather.</p>
+    </ion-item>
+  </ion-list>
+ 
+
+  
 </div>
 
 
