--- a/src/app/about/about.page.html
+++ b/src/app/about/about.page.html
@@ -48,7 +48,7 @@
     </ion-item>
     <ion-item>
       <ion-icon name="globe-outline" style="width: 100px; height: 100px; padding: 2%;"></ion-icon>
-      <p>Uses Geolocation to keep track of your current location and weather.</p>
+      <p>Uses Geolocation to keep track of your current location.</p>
     </ion-item>
   </ion-list>
  
