--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -28,4 +28,8 @@
     </ion-tab-bar>
   </ion-tabs>
 
+  <ion-button>Save</ion-button>
+  <ion-button>Load</ion-button>
+  <ion-button>Print History</ion-button>
+
 </ion-content>
